# rmark

./: .gitignore  .prettierignore  .prettierrc.json  index.html  markdown-desktop-codex-implementation-plan.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/adr/: 001-editor-state-authority.md  002-input-path-and-ipc-boundary.md  003-performance-measurement.md  004-live-preview-decorations.md
docs/checkpoints/: phase-0.md  phase-1.md
docs/performance/: phase-0-baseline.md  phase-1-baseline.md
scripts/: generate-fixtures.mjs
src/: main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs
src/app/: App.svelte  app.css
src/editor/: create-editor.ts  editor-session.ts
src/editor/live-preview/: live-preview.ts
src/editor/performance/: performance-sampler.ts
src/logging/: logger.ts
tests/: setup.ts
tests/editor/: editor-session.test.ts  live-preview.test.ts
tests/performance/: editor-baseline.test.ts  live-preview-performance.test.ts
