[package]
name = "rmark"
version = "0.1.0"
description = "A performance-first Markdown desktop editor"
authors = ["RMark contributors"]
edition = "2021"

[lib]
name = "rmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
png = "0.18"
tauri-build = { version = "2", features = [] }

[dependencies]
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
